--- a/examples/global.css
+++ b/examples/global.css
@@ -1,17 +1,20 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   color: #2c3e50;
 }
+
 ul {
-  line-height: 1.5rem;
-  padding-left: 1.5rem;
+  line-height: 1.5em;
+  padding-left: 1.5em;
 }
+
 a {
   color: #7f8c8d;
   text-decoration: none;
 }
+
 a:hover {
   color: #4fc08d;
 }
